<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Citizen Care</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="services">Services:</string>
    <string name="complaints">Complaints:</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback">Feedback</string>
    <string name="select">Select Service Type</string>
    <string name="select2">Select Complaint Type</string>
    <string name="email">Enter your email</string>
    <string name="confirmpassword">Confirm your password</string>
    <string name="fname">Enter your first name</string>
    <string name="lname">Enter your last name</string>
    <string name="mname">Enter your middle name</string>
    <string name="mno">Enter mobile no.(without +91)</string>
    <string name="password">Enter your password</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="txtviewemail">Email*</string>
    <string name="first_name">First Name*</string>
    <string name="gender">Gender*</string>
    <string name="please_enter_your_details_to_register_on_the_app">Please enter your details to Register on the App</string>
    <string name="last_name">Last Name*</string>
    <string name="middle_name">Middle Name*</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="txtviewpassword">Password*</string>
    <string name="please_enter_your_credentials_to_login">Please enter your credentials to login</string>
    <string name="not_registered_register">Not Registered? Register Here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_head">Please enter your registered email to receive password reset link</string>
    <string name="reset_password">Reset Password</string>
    <string name="Verify_email_head">Please check your inbox and verify your email address</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="admin_page_email">Email</string>
    <string name="admin_page_name">Name</string>
    <string name="admin_page_gender">Gender</string>
    <string name="admin_page_mobile_no">Mobile Number</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="enter_a_new_complaint_type">Enter a new complaint type</string>
    <string name="add_a_new_complaint_type">Add a new complaint type</string>
    <string name="select_a_complaint_type_to_delete">Select a complaint type to delete</string>
    <string name="complaint_type">Complaint Type</string>
    <string name="enter_a_new_service_type">Enter a new service type</string>
    <string name="add_a_new_service_type">Add a new service type</string>
    <string name="select_a_service_type_to_delete">Select a service type to delete</string>
    <string name="service_type">Service Type</string>
    <string name="about_us_content1">
        Welcome to Citizen Care, the cutting-edge municipal corporation app designed with your convenience in mind. At Citizen Care, we revolutionize the way you interact with your local government by seamlessly integrating technology and civic engagement. Our unique functionalities empower you to capture your concerns visually – simply take a picture of your complaint and provide your live location for swift and efficient problem resolution.
    </string>
    <string name="about_us_content2">
        One of the standout features of Citizen Care is the ability to report issues with clarity and precision. By submitting images along with your live location, you ensure that municipal authorities have the necessary information to address and resolve problems promptly. Whether it is a pothole, damaged infrastructure, road issues, park concerns, water outage, mosquito infestation, streetlight problems, or garbage issues, our app makes the reporting process intuitive and effective.
    </string>
    <string name="about_us_content3">
        Moreover, Citizen Care goes beyond issue reporting. Our app allows you to request various services that contribute to the overall well-being of your community. Need additional CCTV cameras for enhanced security? Want to request fogger trucks, dustbins, or water tankers? Citizen Care simplifies the service request process, putting the power to improve your surroundings directly in your hands. Join us on this journey towards a more responsive, connected, and citizen-centric municipality through Citizen Care.
    </string>
    <string name="admin_registration">Admin Registration</string>
    <string name="serviceman_registration">Serviceman Registration</string>
    <string name="add_admin">Add Admin</string>
    <string name="add_serviceman">Add Serviceman</string>
    <string name="change_password_head">You can change your password now.Please enter your password and verify before continuing.</string>
    <string name="authenticate">Authenticate</string>
    <string name="current_password">Current Password*</string>
    <string name="your_profile_is_not_authenticated_yet">Your profile is not authenticated yet!</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="new_password">New Password*</string>
    <string name="confirm_your_new_password">Confirm your new password</string>
    <string name="change_password">Change Password</string>
    <string name="menu_home">Home</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="manage_users">Manage Users</string>
    <string name="devname">Dev Raval</string>
    <string name="devemail">devraval2004@gmail.com</string>
    <string name="devmno">9904325939</string>
    <string name="himaniname">Himani Shah</string>
    <string name="himaniemail">shahhimani703@gmail.com</string>
    <string name="himanimno">7984373949</string>
    <string name="moxaname">Moksha Shah</string>
    <string name="moxaemail">mokshahshah84@gmail.com</string>
    <string name="moxamno">9409517590</string>
    <string name="reports">Reports</string>
    <string name="complaints1">Complaints</string>
    <string name="services1">Services</string>


</resources>