<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_toDoList"
            android:icon="@drawable/ic_service"
            android:title="To-Do-List"
            tools:ignore="HardcodedText" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_confirm_pwd"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_update_profile"
            android:icon="@drawable/ic_update_profile"
            android:title="Update Profile"
            tools:ignore="HardcodedText" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_reports"
            android:title="@string/reports" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    </group>
</menu>