<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        android:layout_margin="@dimen/_19sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_register_head"
            android:layout_marginTop="30dp"
            android:text="@string/please_enter_your_details_to_register_on_the_app"
            android:textColor="@color/text"
            android:textAlignment="center"
            android:textSize="25sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_register_first_name"
            android:layout_below="@id/textview_register_head"
            android:text="@string/first_name"
            android:padding="6dp"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:layout_marginTop="40dp" />

        <EditText
            android:id="@+id/editText_register_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_register_first_name"
            android:background="@drawable/border"
            android:hint="@string/fname"
            android:inputType="textPersonName"
            android:padding="6dp"
            android:textSize="20sp"
            tools:ignore="Autofill,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_register_middle_name"
            android:layout_below="@id/editText_register_first_name"
            android:text="@string/middle_name"
            android:padding="6dp"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/editText_register_middle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_register_middle_name"
            android:background="@drawable/border"
            android:hint="@string/mname"
            android:inputType="textPersonName"
            android:padding="6dp"
            android:textSize="20sp"
            tools:ignore="Autofill,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_register_last_name"
            android:layout_below="@id/editText_register_middle_name"
            android:text="@string/last_name"
            android:padding="6dp"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/editText_register_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_register_last_name"
            android:background="@drawable/border"
            android:hint="@string/lname"
            android:inputType="textPersonName"
            android:padding="6dp"
            android:textSize="20sp"
            tools:ignore="Autofill,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_register_email"
            android:layout_below="@id/editText_register_last_name"
            android:text="@string/txtviewemail"
            android:padding="6dp"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/editText_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_register_email"
            android:background="@drawable/border"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textSize="20sp"
            tools:ignore="Autofill,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_register_gender"
            android:layout_below="@id/editText_register_email"
            android:text="@string/gender"
            android:padding="6dp"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/textview_register_gender"
            android:checkedButton="@+id/radio_female"
            android:id="@+id/radio_group_register_gender">

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/female"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:theme="@style/RadioButtonStyle"
                tools:ignore="TouchTargetSizeCheck" />


            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/male"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:theme="@style/RadioButtonStyle"
                tools:ignore="TouchTargetSizeCheck" />


        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_register_mobile"
            android:layout_below="@id/radio_group_register_gender"
            android:text="@string/mobile_number"
            android:padding="6dp"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/editText_register_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_register_mobile"
            android:background="@drawable/border"
            android:hint="@string/mno"
            android:inputType="phone"
            android:padding="6dp"
            android:textSize="20sp"
            tools:ignore="Autofill,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_register_password"
            android:layout_below="@id/editText_register_mobile"
            android:text="@string/txtviewpassword"
            android:padding="6dp"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="6dp"
            android:textSize="20sp"
            android:layout_below="@id/textview_register_password"
            android:background="@drawable/border"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_register_confirm_password"
            android:layout_below="@id/editText_register_password"
            android:text="@string/confirm_password"
            android:padding="6dp"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_confirm_password"
            android:hint="@string/confirmpassword"
            android:inputType="textPassword"
            android:padding="6dp"
            android:textSize="20sp"
            android:layout_below="@id/textview_register_confirm_password"
            android:background="@drawable/border"
            tools:ignore="Autofill" />



        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_below="@id/editText_register_confirm_password"
            android:layout_marginTop="50dp"
            android:text="@string/register"
            android:id="@+id/button_register"
            android:backgroundTint="@color/background"
            android:textColor="@color/text"
            android:textSize="20sp"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:visibility="gone"/>
    </RelativeLayout>
</ScrollView>