<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">
    <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_15sdp"
    android:padding="@dimen/_15sdp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_60sdp"
            android:backgroundTint="@color/background"
            android:text="@string/register"
            android:textColor="@color/text"
            android:textSize="@dimen/_18sdp"
            tools:ignore="TextSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/btn1"
            android:backgroundTint="@color/background"
            android:text="@string/login"
            android:textColor="@color/text"
            android:textSize="@dimen/_18sdp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn1"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/_255sdp"
            android:text="@string/services"
            android:textColor="@color/text"
            android:textSize="@dimen/_20sdp"
            tools:ignore="RtlSymmetry,TextSizeCheck" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text1"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/_80sdp"
            android:text="@string/complaints"
            android:textColor="@color/text"
            android:textSize="@dimen/_20sdp"
            tools:ignore="RtlSymmetry,TextSizeCheck" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text2"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_80sdp"
            android:text="@string/feedback"
            android:textColor="@color/text"
            android:textSize="@dimen/_20sdp"
            tools:ignore="RtlSymmetry,TextSizeCheck" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo"
            android:layout_marginTop="@dimen/_30sdp"
            android:maxWidth="@dimen/_300sdp"
            android:src="@drawable/logo"
            android:adjustViewBounds="true"
            android:layout_centerHorizontal="true"
            android:importantForAccessibility="no" />
        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text3"
            android:textColor="@color/text"
            android:textSize="@dimen/_20sdp"
            android:text="@string/about_us"
            android:layout_marginTop="@dimen/_43sdp"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text3"
            android:textColor="@color/text"
            android:textSize="@dimen/_20sdp"
            android:text="@string/contact_us"
            android:layout_marginTop="@dimen/_43sdp"
            android:layout_marginStart="@dimen/_60sdp"
            android:layout_toEndOf="@id/text4"
            tools:ignore="RtlSymmetry" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/_240sdp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:textColorHint="@color/text"
            app:boxStrokeColor="@color/text"
            app:hintTextColor="@color/text"
            app:endIconTint="@color/text"
            android:layout_below="@id/text1"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:id="@+id/autoComplete1"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background"
                android:hint="@string/select"
                android:inputType="none"
                android:textColorHint="@color/text"
                android:textSize="@dimen/_16sdp"
                tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/_240sdp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:textColorHint="@color/text"
            android:layout_below="@id/text2"
            app:boxStrokeColor="@color/text"
            app:hintTextColor="@color/text"
            app:endIconTint="@color/text"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:id="@+id/autoComplete2"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background"
                android:hint="@string/select2"
                android:inputType="none"
                android:textColorHint="@color/text"
                android:textSize="@dimen/_16sdp"
                tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
</RelativeLayout>
</ScrollView>