<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Forgot_Password">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:padding="@dimen/_15sdp"
        android:background="@color/background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_head"
            android:textSize="@dimen/_20ssp"
            android:id="@+id/textview_forgot_pwd_head"
            android:layout_marginTop="@dimen/_30sdp"
            android:textColor="@color/text"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_forgot_pwd_email"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_below="@id/textview_forgot_pwd_head"
            android:text="@string/txtviewemail"
            android:textColor="@color/text"
            android:padding="6dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editText_forgot_pwd_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_forgot_pwd_email"
            android:background="@drawable/border"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textSize="20sp"
            tools:ignore="Autofill,TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_below="@id/editText_forgot_pwd_email"
            android:layout_marginTop="50dp"
            android:text="@string/reset_password"
            android:id="@+id/button_forgot_password"
            android:backgroundTint="@color/background"
            android:textColor="@color/text"
            android:textSize="@dimen/_15ssp"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:visibility="gone"/>

    </RelativeLayout>

</ScrollView>